--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<h1>
-    {{'Hola mundo'}}
-</h1>
+<div class="text-layout">
 
-<button (click)="showName()">
+    <h1>
+        {{'Hola mundo'}}
+    </h1>
+</div>
+
+
+<button pButton (click)="showName()">
     Cambiar nombre
 </button>
