Using prime button and prime card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
 </div>
 
 
-<button pButton (click)="showName()">
-    Cambiar nombre
+<button pButton (click)="showName()" label="Cambiar nombre" type="button" class="p-button-help" icon="pi pi-check" iconPos="right">
+    
 </button>
+
+<p-card header="Simple Card" subheader="Subheader de la simple card">
+    Conentido esencial
+</p-card>
