Starting menu bar using primeng

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="text-layout">
+<!-- <div class="text-layout">
 
     <h1>
         {{'Hola mundo'}}
@@ -12,4 +12,6 @@
 
 <p-card header="Simple Card" subheader="Subheader de la simple card">
     Conentido esencial
-</p-card>
+</p-card> -->
+
+<app-menu></app-menu>
