--- a/src/app/sells/pages/basics/basics.component.html
+++ b/src/app/sells/pages/basics/basics.component.html
@@ -1,1 +1,28 @@
-<p>basics works!</p>
+<div class="text-layout">
+
+    <h1>
+        Pipes Básicos
+    </h1>
+
+    <p>
+        Pipes incluidos en Angular - Usualmente en el módulo de Common
+    </p>
+</div>
+
+<div class="p-grid">
+
+    <div class="p-col-4">
+        <p-card header="uppercase">
+
+        </p-card>
+    </div>
+
+    <div class="p-col-4">
+        2
+    </div>
+
+    <div class="p-col-4">
+        3
+    </div>
+
+</div>
