--- a/src/app/sells/pages/numbers/numbers.component.html
+++ b/src/app/sells/pages/numbers/numbers.component.html
@@ -1,1 +1,19 @@
-<p>numbers works!</p>
+<div class="text-layout">
+
+    <h1>
+        Decimal pipes y porcentajes
+    </h1>
+
+    <p>
+        Pipes incluidos en Angular - Usualmente en el módulo de Common
+    </p>
+</div>
+
+<div class="p-grid">
+
+    <div class="p-col-4">
+        <p-card header="Ventas netas" subheader="del año">
+            <i class="pi pi-dollar"></i> {{sells | number:'1.2-2'}}
+        </p-card>
+    </div>
+</div>
