--- a/src/app/sells/pages/basics/basics.component.html
+++ b/src/app/sells/pages/basics/basics.component.html
@@ -58,6 +58,7 @@
             <ul>
                 <li>fecha | date: 'long': 'GMT-6'</li>
                 <li>fecha | date: 'long': 'GMT-4'</li>
+                <li>fecha | date: 'long': '': 'en'</li>
             </ul>
 
         </p-card>
