--- a/src/app/sells/pages/numbers/numbers.component.html
+++ b/src/app/sells/pages/numbers/numbers.component.html
@@ -13,7 +13,19 @@
 
     <div class="p-col-4">
         <p-card header="Ventas netas" subheader="del año">
-            <i class="pi pi-dollar"></i> {{sells | number:'1.2-2'}}
+            <i class="pi pi-dollar"></i> {{sells + 1000000 | number:'1.2-2'}}
+        </p-card>
+    </div>
+
+    <div class="p-col-4">
+        <p-card header="Ventas netas" subheader="del año">
+            {{sells + 2000000 | currency:'CAD':'symbol-narrow':'1.0-4'}}
+        </p-card>
+    </div>
+
+    <div class="p-col-4">
+        <p-card header="Ganacia porcentual" subheader="del presente año">
+            {{percentage | percent:'2.2-2'}}
         </p-card>
     </div>
 </div>
