--- a/src/app/sells/pages/no-commons/no-commons.component.html
+++ b/src/app/sells/pages/no-commons/no-commons.component.html
@@ -14,7 +14,9 @@
 
     <div class="p-col p-md-6 p-sm-9">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-            Content
+
+            Saludos {{name}}, es un placer {{gender | i18nSelect: invitationMap}} a nuestro evento
+
         </p-fieldset>
     </div>
 
