--- a/src/app/sells/pages/no-commons/no-commons.component.html
+++ b/src/app/sells/pages/no-commons/no-commons.component.html
@@ -15,14 +15,37 @@
     <div class="p-col p-md-6 p-sm-9">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
 
-            Saludos {{name}}, es un placer {{gender | i18nSelect: invitationMap}} a nuestro evento
+
+            <p>
+                Saludos {{name}}, es un placer {{gender | i18nSelect: invitationMap}} a nuestro evento
+            </p>
+
+            <button pButton class="p-button-outlined" label="Cambiar cliente" (click)="CambiarNombre()"></button>
 
         </p-fieldset>
     </div>
 
     <div class="p-col p-md-6 p-sm-9">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-            Actualmente {{clientes.length | i18nPlural:clientsMap}} esperando
+
+            <p>
+                Actualmente {{clientes.length | i18nPlural:clientsMap}} esperando
+            </p>
+            <button pButton class="p-button-outlined  p-button-danger" label="Borrar cliente" (click)="BorrarCliente()"></button>
+        </p-fieldset>
+    </div>
+
+
+    <div class="p-col p-md-6 p-sm-9">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+            <b>Original</b>
+            <pre> {{clientes}} </pre>
+
+            <b>slice:0:2</b>
+            <pre> {{clientes | slice:0:2}} </pre>
+
+            <b>slice:1:3</b>
+            <pre> {{clientes | slice:1:3}} </pre>
         </p-fieldset>
     </div>
 </div>
