--- a/src/app/sells/pages/no-commons/no-commons.component.html
+++ b/src/app/sells/pages/no-commons/no-commons.component.html
@@ -48,4 +48,16 @@
             <pre> {{clientes | slice:1:3}} </pre>
         </p-fieldset>
     </div>
+
+    <div class="p-col p-md-6 p-sm-9">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+
+            <ul>
+                <li *ngFor="let item of person | keyvalue">
+                    <b>{{item.key | titlecase}} :</b> {{item.value}}
+                </li>
+            </ul>
+
+        </p-fieldset>
+    </div>
 </div>
