--- a/src/app/sells/pages/order/order.component.html
+++ b/src/app/sells/pages/order/order.component.html
@@ -6,3 +6,54 @@
         
     </button>
 </div>
+
+
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+
+    </div>
+
+    <div class="p-toolbar-group-right">
+
+        <button pButton class="p-button-outlined p-mr-1 p-button-warning" label="Toggle Mayusculas" (click)="mayus = !mayus">
+        
+        </button>
+
+        <button pButton icon="pi pi-sort" label="Por nombre" class="p-mr-1">
+
+        </button>
+
+        <button pButton icon="pi pi-sort" label="Por valores" class="p-mr-1 p-button-success">
+
+        </button>
+
+        <button pButton icon="pi pi-sort" label="Por color" class="p-mr-1 p-button-help">
+
+        </button>
+    </div>
+</p-toolbar>
+
+<div class="p-grid">
+    <div class="p-col p-mt-2">
+
+        <p-table [value]="[]">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Quantity</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product>
+                <tr>
+                    <td>{{product.code}}</td>
+                    <td>{{product.name}}</td>
+                    <td>{{product.category}}</td>
+                    <td>{{product.quantity}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+
+    </div>
+</div>
