--- a/src/app/sells/pages/order/order.component.html
+++ b/src/app/sells/pages/order/order.component.html
@@ -47,7 +47,7 @@
             <ng-template pTemplate="body" let-heroe>
                 <tr>
                     <td>{{heroe.name}}</td>
-                    <td>{{heroe.vuela}}</td>
+                    <td>{{heroe.vuela | fly | titlecase}}</td>
                     <td>{{heroe.color}}</td>
                 </tr>
             </ng-template>
