Pipe Order and items ordered by name

--- a/src/app/sells/pages/order/order.component.html
+++ b/src/app/sells/pages/order/order.component.html
@@ -36,7 +36,7 @@
 <div class="p-grid">
     <div class="p-col p-mt-2">
 
-        <p-table [value]="heroes">
+        <p-table [value]="heroes | order">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Nombre</th>
