--- a/src/app/sells/pages/order/order.component.html
+++ b/src/app/sells/pages/order/order.component.html
@@ -19,15 +19,15 @@
         
         </button>
 
-        <button pButton icon="pi pi-sort" label="Por nombre" class="p-mr-1">
+        <button pButton icon="pi pi-sort" label="Por nombre" class="p-mr-1" (click)="changeOrder('name')">
 
         </button>
 
-        <button pButton icon="pi pi-sort" label="Por valores" class="p-mr-1 p-button-success">
+        <button pButton icon="pi pi-sort" label="Por valores" class="p-mr-1 p-button-success" (click)="changeOrder('fly')">
 
         </button>
 
-        <button pButton icon="pi pi-sort" label="Por color" class="p-mr-1 p-button-help">
+        <button pButton icon="pi pi-sort" label="Por color" class="p-mr-1 p-button-help" (click)="changeOrder('color')">
 
         </button>
     </div>
@@ -36,7 +36,7 @@
 <div class="p-grid">
     <div class="p-col p-mt-2">
 
-        <p-table [value]="heroes | order">
+        <p-table [value]="heroes | order:orderby">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Nombre</th>
