--- a/src/app/sells/pages/order/order.component.html
+++ b/src/app/sells/pages/order/order.component.html
@@ -54,4 +54,32 @@
         </p-table>
 
     </div>
-</div>
+
+    <div class="p-grid">
+        <div class="p-col p-mt-2">
+
+            <p-table [value]="heroes | order:orderby">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="name">Nombre
+                            <p-sortIcon field="name"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="vuela">Vuela
+                            <p-sortIcon field="vuela"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="color">Color
+                            <p-sortIcon field="color"></p-sortIcon>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-heroe>
+                    <tr>
+                        <td>{{heroe.name}}</td>
+                        <td>{{heroe.vuela | fly | titlecase}}</td>
+                        <td>{{heroe.color}}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+
+        </div>
+    </div>
